# Half-Edge-Data-Structure

./: CMakeLists.txt  Cartesian3.cpp  Cartesian3.h  DirectedEdge.cpp  Face.cpp  Face.h  Face2FaceIndex.cpp  Face2FaceIndex.h  FaceIndex.cpp  FaceIndex2DirectedEdge.cpp  FaceIndex2DirectedEdge.h  Makefile  readme.txt
